# CppExtension

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml
UniDeskCppExt/: UDFrameless.pyi  __init__.pyi  udcpptools.pyi
bindings/: BUDFrameless.cpp  CMakeLists.txt
src/: CMakeLists.txt  UDFrameless.cpp  UDFrameless.h  UDTools.cpp
src/QHotkey/: CMakeLists.txt
src/QHotkey/QHotkey/: qhotkey_linux.cpp  xdgshortcut.cpp
src/udcpptools/: udcpptools.cpp  udcpptools.h
